// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render the component 1`] = `
Array [
  <div
    class="header"
  >
    sulu_admin.welcome
  </div>,
  <form
    class="form"
  >
    <fieldset>
      <label
        class="inputField"
      >
        <div
          class="labelText"
        >
          sulu_admin.username_or_email
        </div>
        <label
          class="input default left"
        >
          <div
            class="prependedContainer default"
          >
            <span
              aria-label="su-user"
              class="su-user icon default"
            />
          </div>
          <input
            type="text"
            value=""
          />
        </label>
      </label>
      <label
        class="inputField"
      >
        <div
          class="labelText"
        >
          sulu_admin.password
        </div>
        <label
          class="input default left"
        >
          <div
            class="prependedContainer default"
          >
            <span
              aria-label="su-lock"
              class="su-lock icon default"
            />
          </div>
          <input
            type="password"
            value=""
          />
        </label>
      </label>
      <div
        class="buttons"
      >
        <button
          class="button link"
          type="button"
        >
          <span
            class="text"
          >
            sulu_admin.forgot_password
          </span>
        </button>
        <button
          class="button primary"
          disabled=""
          type="submit"
        >
          <span
            class="text"
          >
            sulu_admin.login
          </span>
        </button>
      </div>
    </fieldset>
  </form>,
]
`;

exports[`Should render the component loading 1`] = `
Array [
  <div
    class="header"
  >
    sulu_admin.welcome
  </div>,
  <form
    class="form"
  >
    <fieldset>
      <label
        class="inputField"
      >
        <div
          class="labelText"
        >
          sulu_admin.username_or_email
        </div>
        <label
          class="input default left"
        >
          <div
            class="prependedContainer default"
          >
            <span
              aria-label="su-user"
              class="su-user icon default"
            />
          </div>
          <input
            type="text"
            value=""
          />
        </label>
      </label>
      <label
        class="inputField"
      >
        <div
          class="labelText"
        >
          sulu_admin.password
        </div>
        <label
          class="input default left"
        >
          <div
            class="prependedContainer default"
          >
            <span
              aria-label="su-lock"
              class="su-lock icon default"
            />
          </div>
          <input
            type="password"
            value=""
          />
        </label>
      </label>
      <div
        class="buttons"
      >
        <button
          class="button link"
          type="button"
        >
          <span
            class="text"
          >
            sulu_admin.forgot_password
          </span>
        </button>
        <button
          class="button primary loading"
          disabled=""
          type="submit"
        >
          <span
            class="text"
          >
            sulu_admin.login
          </span>
          <div
            class="loader"
          >
            <div
              class="spinner"
              style="width:25px;height:25px"
            >
              <div
                class="doubleBounce1"
              />
              <div
                class="doubleBounce2"
              />
            </div>
          </div>
        </button>
      </div>
    </fieldset>
  </form>,
]
`;

exports[`Should render the component with error 1`] = `
Array [
  <div
    class="header small"
  >
    sulu_admin.login_error
  </div>,
  <form
    class="form"
  >
    <fieldset>
      <label
        class="inputField error"
      >
        <div
          class="labelText"
        >
          sulu_admin.username_or_email
        </div>
        <label
          class="input default left error"
        >
          <div
            class="prependedContainer default"
          >
            <span
              aria-label="su-user"
              class="su-user icon default"
            />
          </div>
          <input
            type="text"
            value=""
          />
        </label>
      </label>
      <label
        class="inputField error"
      >
        <div
          class="labelText"
        >
          sulu_admin.password
        </div>
        <label
          class="input default left error"
        >
          <div
            class="prependedContainer default"
          >
            <span
              aria-label="su-lock"
              class="su-lock icon default"
            />
          </div>
          <input
            type="password"
            value=""
          />
        </label>
      </label>
      <div
        class="buttons"
      >
        <button
          class="button link"
          type="button"
        >
          <span
            class="text"
          >
            sulu_admin.forgot_password
          </span>
        </button>
        <button
          class="button primary"
          disabled=""
          type="submit"
        >
          <span
            class="text"
          >
            sulu_admin.login
          </span>
        </button>
      </div>
    </fieldset>
  </form>,
]
`;
